# superbased-observer

./: .gitignore  CHANGELOG.md  Makefile  PRIVACY.md  README.md  codex-analytics-sample-response.json  go.mod  go.sum  package-lock.json  package.json
.github/workflows/: obs-eval.yml  website-deploy.yml
charts/observer-org/: Chart.yaml
cmd/observer/: adapters.go  adapters_test.go  backfill_test.go  cache_status.go  claude_test.go  clinecli.go  codeintel.go  codeintel_surfaces.go  codex_test.go  copilotcli.go  dashboard.go  diag.go  eval.go  eval_test.go  gemini.go  guardwire.go  hermes.go  hook.go  hook_test.go  init.go  init_wire_test.go  judgeclient.go  launch.go  launch_test.go  main.go  mcp_audit_test.go  obs_integration_test.go  obs_wire.go  obs_wire_stub.go  openclaw.go  opencode.go  opencode_test.go  org.go  org_managed_settings.go  org_pushstatus.go  org_pushstatus_test.go  otlp_ingest.go  otlp_ingest_test.go  pi.go  predict.go  (+17 more)
cmd/observer-org/: main.go  main_test.go  quickstart.go  tokens.go  users.go
docs/: teams-architecture.md  teams-getting-started.md  teams-operations.md
internal/cachetrack/: engine.go  engine_test.go  routing.go  routing_test.go
internal/cachewarm/: cachewarm.go  cachewarm_test.go  doc.go  imports_test.go  (+2 more)
scripts/: restart-daemon.sh  serve-website.py
sdk/: .gitignore
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: quickstart.py  raw_otlp.py
sdk/python/superbased/: __init__.py
vscode/: package.json
web/: index.html
web2/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
(+607 files in other folders)
